--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -2,59 +2,44 @@
 %% BIBLIOGRAFIA
 %% ==============================
 
-@book{adorno1959,
-  author    = {Adorno, T.},
-  title     = {La filosofia della musica moderna},
-  publisher = {Einaudi},
-  year      = {1959},
-  keywords  = {bib}
+@incollection{discipio2021,
+  author = {Di Scipio, Agostino},
+  title = {Thinking Liveness in Performance with Live Electronics},
+  booktitle = {Sound Work: Composition as Critical Technical Practice},
+  editor = {Kanach, Sharon and Saladin, Matthieu},
+  year = {2021},
+  publisher = {Leuven University Press},
+  address = {Leuven},
+  pages = {173--191}
 }
 
-@book{bianchini2000,
-  author    = {Bianchini, R. and A., Cipriani},
-  title     = {Virtual sound},
-  publisher = {Contempo Edizioni},
-  location  = {Roma},
-  year      = {2000},
-  keywords  = {bib}
+@book{chadabe1997,
+  author = {Chadabe, Joel},
+  title = {Electric Sound: The Past and Promise of Electronic Music},
+  year = {1997},
+  publisher = {Prentice Hall},
+  address = {Upper Saddle River, NJ}
 }
 
-@inproceedings{dannenberg2003,
-  author    = {Dannenberg, R. and Bernstein, B. and Zeglin, G. and Neuendorffer, T.},
-  title     = {Sound Synthesis from Video, Wearable Lights, and The Watercourse Way},
-  booktitle = {Proceedings of the 9th Biennial Symposium on Arts and Technology},
-  editor    = {Dannenberg, R. and Bernstein, B.},
-  publisher = {Connecticut College},
-  pages     = {38--44},
-  year      = {2003},
-  keywords  = {bib}
+@incollection{mumma2015,
+  author = {Mumma, Gordon},
+  title = {John Cage, Electronic Technology, and Live-Electronic Music},
+  booktitle = {Cybersonic Arts: Adventures in American New Music},
+  editor = {Fillion, Michelle and Wolff, Christian},
+  year = {2015},
+  publisher = {University of Illinois Press},
+  address = {Urbana},
+  pages = {167--174},
+  series = {Music in American Life}
 }
 
-@book{delduca1987,
-  author    = {Del Duca, M.},
-  title     = {Musica digitale. Sintesi analisi e filtraggio digitale nella musica elettronica},
-  publisher = {Franco Muzzio Editore},
-  location  = {Padova},
-  year      = {1987},
-  keywords  = {bib}
-}
-
-@book{pallottino2003,
-  author    = {Pallottino, G.},
-  title     = {Appunti di elettronica},
-  publisher = {Dipartimento di Fisica, Università La Sapienza},
-  location  = {Roma},
-  year      = {2003},
-  keywords  = {bib}
-}
-
-@article{glasersfeld1994,
-  author  = {Von Glasersfeld, E.},
-  title   = {Wiener’s Insight into Communication},
-  journal = {Kybernetes},
-  volume  = {23},
-  number  = {6/7},
-  pages   = {21--22},
-  year    = {1994},
-  keywords  = {bib}
+@incollection{bernardini1986,
+  author = {Bernardini, Nicola},
+  title = {Live Electronics},
+  booktitle = {Nuova Atlantide: Il continente della musica elettronica 1900-1986},
+  editor = {Doati, Roberto and Vidolin, Alvise},
+  year = {1986},
+  publisher = {La Biennale di Venezia},
+  address = {Venezia},
+  pages = {61--78}
 }
