--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -43,3 +43,27 @@
   address = {Venezia},
   pages = {61--78}
 }
+
+@incollection{mumma2015b,
+  author = {Mumma, Gordon},
+  title = {An Electronic Music Studio for the Independent Composer},
+  booktitle = {Cybersonic Arts: Adventures in American New Music},
+  editor = {Fillion, Michelle and Wolff, Christian},
+  year = {2015},
+  publisher = {University of Illinois Press},
+  address = {Urbana},
+  pages = {18--24},
+  series = {Music in American Life}
+}
+
+@incollection{mumma2015hornpipe,
+  author = {Mumma, Gordon},
+  title = {Two Cybersonic Works: Horn and Hornpipe},
+  booktitle = {Cybersonic Arts: Adventures in American New Music},
+  editor = {Fillion, Michelle and Wolff, Christian},
+  year = {2015},
+  publisher = {University of Illinois Press},
+  address = {Urbana},
+  pages = {53--62},
+  series = {Music in American Life}
+}
