--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -1,5 +1,44 @@
 %% ==============================
-%% BIBLIOGRAFIA
+%% BIBLIOGRAFIA COMPLETA
+%% ==============================
+%% File generato: 10 novembre 2025
+%% Progetto: Geografie del Live Electronics
+%% Autore: Giulio Romano De Mattia
+
+%% ==============================
+%% LIBRI
+%% ==============================
+
+@book{chadabe1997,
+  author = {Chadabe, Joel},
+  title = {Electric Sound: The Past and Promise of Electronic Music},
+  year = {1997},
+  publisher = {Prentice Hall},
+  address = {Upper Saddle River, NJ}
+}
+
+@book{auslander2023,
+  author = {Auslander, Philip},
+  title = {Liveness: Performance in a Mediatized Culture},
+  edition = {3},
+  year = {2023},
+  publisher = {Routledge},
+  address = {Abingdon, UK and New York},
+  doi = {10.4324/9780429264818}
+}
+
+@book{collins2020,
+  author = {Collins, Nicolas},
+  title = {Handmade Electronic Music: The Art of Hardware Hacking},
+  edition = {3},
+  year = {2020},
+  publisher = {Routledge},
+  address = {New York and Abingdon},
+  isbn = {9780367210090}
+}
+
+%% ==============================
+%% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
 
 @incollection{discipio2021,
@@ -13,14 +52,6 @@
   pages = {173--191}
 }
 
-@book{chadabe1997,
-  author = {Chadabe, Joel},
-  title = {Electric Sound: The Past and Promise of Electronic Music},
-  year = {1997},
-  publisher = {Prentice Hall},
-  address = {Upper Saddle River, NJ}
-}
-
 @incollection{mumma2015,
   author = {Mumma, Gordon},
   title = {John Cage, Electronic Technology, and Live-Electronic Music},
@@ -30,7 +61,34 @@
   publisher = {University of Illinois Press},
   address = {Urbana},
   pages = {167--174},
-  series = {Music in American Life}
+  series = {Music in American Life},
+  isbn = {9780252039430}
+}
+
+@incollection{mumma2015b,
+  author = {Mumma, Gordon},
+  title = {An Electronic Music Studio for the Independent Composer},
+  booktitle = {Cybersonic Arts: Adventures in American New Music},
+  editor = {Fillion, Michelle and Wolff, Christian},
+  year = {2015},
+  publisher = {University of Illinois Press},
+  address = {Urbana},
+  pages = {18--24},
+  series = {Music in American Life},
+  isbn = {9780252039430}
+}
+
+@incollection{mumma2015hornpipe,
+  author = {Mumma, Gordon},
+  title = {Two Cybersonic Works: Horn and Hornpipe},
+  booktitle = {Cybersonic Arts: Adventures in American New Music},
+  editor = {Fillion, Michelle and Wolff, Christian},
+  year = {2015},
+  publisher = {University of Illinois Press},
+  address = {Urbana},
+  pages = {53--62},
+  series = {Music in American Life},
+  isbn = {9780252039430}
 }
 
 @incollection{bernardini1986,
@@ -44,26 +102,44 @@
   pages = {61--78}
 }
 
-@incollection{mumma2015b,
-  author = {Mumma, Gordon},
-  title = {An Electronic Music Studio for the Independent Composer},
-  booktitle = {Cybersonic Arts: Adventures in American New Music},
-  editor = {Fillion, Michelle and Wolff, Christian},
-  year = {2015},
-  publisher = {University of Illinois Press},
-  address = {Urbana},
-  pages = {18--24},
-  series = {Music in American Life}
+%% ==============================
+%% ARTICOLI IN RIVISTE
+%% ==============================
+
+@article{croft2007,
+  author = {Croft, John},
+  title = {Theses on Liveness},
+  journal = {Organised Sound},
+  volume = {12},
+  number = {1},
+  year = {2007},
+  pages = {59--66},
+  doi = {10.1017/S1355771807001604},
+  publisher = {Cambridge University Press}
 }
 
-@incollection{mumma2015hornpipe,
-  author = {Mumma, Gordon},
-  title = {Two Cybersonic Works: Horn and Hornpipe},
-  booktitle = {Cybersonic Arts: Adventures in American New Music},
-  editor = {Fillion, Michelle and Wolff, Christian},
-  year = {2015},
-  publisher = {University of Illinois Press},
-  address = {Urbana},
-  pages = {53--62},
-  series = {Music in American Life}
+%% ==============================
+%% ATTI DI CONFERENZE
+%% ==============================
+
+@inproceedings{waters2007,
+  author = {Waters, Simon},
+  title = {Performance Ecosystems: Ecological Approaches to Musical Interaction},
+  booktitle = {Proceedings of the Electroacoustic Music Studies Network Conference},
+  year = {2007},
+  month = {June},
+  address = {Leicester, UK},
+  organization = {De Montfort University},
+  url = {http://www.ems-network.org/spip.php?article278}
 }
+
+%% ==============================
+%% NOTE
+%% ==============================
+%% Entry ancora da completare con ricerche aggiuntive:
+%% - Bernardini (On the emergence of live electronics, Luigi Nono)
+%% - Di Scipio (Sound is the interface; Circuiti del tempo)
+%% - Mooney (Hugh Davies Collection)
+%% - Jameson (Postmodernism)
+%% - Agre (Critical Technical Practice)
+%% - Altri PDF nel project knowledge
