--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -133,6 +133,49 @@
   url = {http://www.ems-network.org/spip.php?article278}
 }
 
+
+@article{discipio2003,
+  author = {Di Scipio, Agostino},
+  title = {'Sound is the interface': from interactive to ecosystemic signal processing},
+  journal = {Organised Sound},
+  volume = {8},
+  number = {3},
+  year = {2003},
+  pages = {269--277},
+  doi = {10.1017/S1355771803000244},
+  publisher = {Cambridge University Press}
+}
+
+@article{mooney2017,
+  author = {Mooney, James},
+  title = {The Hugh Davies Collection: live electronic music and self-built electro-acoustic musical instruments, 1967-1975},
+  journal = {Science Museum Group Journal},
+  number = {7},
+  year = {2017},
+  month = {Spring},
+  doi = {10.15180/170705},
+  url = {http://journal.sciencemuseum.ac.uk/browse/issue-07/the-hugh-davies-collection/}
+}
+
+@book{jameson1991,
+  author = {Jameson, Fredric},
+  title = {Postmodernism, or, The Cultural Logic of Late Capitalism},
+  year = {1991},
+  publisher = {Duke University Press},
+  address = {Durham, NC},
+  series = {Post-Contemporary Interventions}
+}
+
+@incollection{agre1997,
+  author = {Agre, Philip E.},
+  title = {Toward a Critical Technical Practice: Lessons Learned in Trying to Reform AI},
+  booktitle = {Bridging the Great Divide: Social Science, Technical Systems, and Cooperative Work},
+  editor = {Bowker, Geoffrey C. and Gasser, Les and Star, Susan Leigh and Turner, William},
+  year = {1997},
+  publisher = {Lawrence Erlbaum Associates},
+  address = {Mahwah, NJ}
+}
+
 %% ==============================
 %% NOTE
 %% ==============================
