--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -37,6 +37,15 @@
   isbn = {9780367210090}
 }
 
+@book{jameson1991,
+  author = {Jameson, Fredric},
+  title = {Postmodernism, or, The Cultural Logic of Late Capitalism},
+  year = {1991},
+  publisher = {Duke University Press},
+  address = {Durham, NC},
+  series = {Post-Contemporary Interventions}
+}
+
 %% ==============================
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
@@ -102,6 +111,29 @@
   pages = {61--78}
 }
 
+
+@incollection{agre1997,
+  author = {Agre, Philip E.},
+  title = {Toward a Critical Technical Practice: Lessons Learned in Trying to Reform AI},
+  booktitle = {Bridging the Great Divide: Social Science, Technical Systems, and Cooperative Work},
+  editor = {Bowker, Geoffrey C. and Gasser, Les and Star, Susan Leigh and Turner, William},
+  year = {1997},
+  publisher = {Lawrence Erlbaum Associates},
+  address = {Mahwah, NJ}
+}
+
+
+@incollection{horl2021,
+  author = {Hörl, Erich},
+  title = {A Thousand Ecologies: The Process of Cyberneticization and General Ecology},
+  booktitle = {Sound Work},
+  year = {2021},
+  publisher = {Leuven University Press},
+  address = {Leuven},
+  isbn = {978-94-6270-258-5},
+  pages = {121--129}
+}
+
 %% ==============================
 %% ARTICOLI IN RIVISTE
 %% ==============================
@@ -118,19 +150,26 @@
   publisher = {Cambridge University Press}
 }
 
-%% ==============================
-%% ATTI DI CONFERENZE
-%% ==============================
-
-@inproceedings{waters2007,
+@article{waters2021,
   author = {Waters, Simon},
-  title = {Performance Ecosystems: Ecological Approaches to Musical Interaction},
-  booktitle = {Proceedings of the Electroacoustic Music Studies Network Conference},
-  year = {2007},
-  month = {June},
-  address = {Leicester, UK},
-  organization = {De Montfort University},
-  url = {http://www.ems-network.org/spip.php?article278}
+  title = {The Entanglements which make Instruments Musical: Rediscovering Sociality},
+  journal = {Journal of New Music Research},
+  volume = {50},
+  number = {2},
+  year = {2021},
+  pages = {133--146},
+  doi = {10.1080/09298215.2021.1899247}
+}
+
+@article{mooney2017,
+  author = {Mooney, James},
+  title = {The Hugh Davies Collection: live electronic music and self-built electro-acoustic musical instruments, 1967-1975},
+  journal = {Science Museum Group Journal},
+  number = {7},
+  year = {2017},
+  month = {Spring},
+  doi = {10.15180/170705},
+  url = {http://journal.sciencemuseum.ac.uk/browse/issue-07/the-hugh-davies-collection/}
 }
 
 
@@ -146,34 +185,54 @@
   publisher = {Cambridge University Press}
 }
 
-@article{mooney2017,
-  author = {Mooney, James},
-  title = {The Hugh Davies Collection: live electronic music and self-built electro-acoustic musical instruments, 1967-1975},
-  journal = {Science Museum Group Journal},
-  number = {7},
-  year = {2017},
-  month = {Spring},
-  doi = {10.15180/170705},
-  url = {http://journal.sciencemuseum.ac.uk/browse/issue-07/the-hugh-davies-collection/}
+@article{roth2023,
+  author = {Roth, Timothy},
+  title = {Navigating Technological Obsolescence: Analysis and Reconstruction of Stockhausen's Mikrophonie I},
+  journal = {Contemporary Music Review},
+  volume = {42},
+  number = {1},
+  year = {2023},
+  pages = {61--81},
+  doi = {10.1080/07494467.2023.2225887}
 }
 
-@book{jameson1991,
-  author = {Jameson, Fredric},
-  title = {Postmodernism, or, The Cultural Logic of Late Capitalism},
-  year = {1991},
-  publisher = {Duke University Press},
-  address = {Durham, NC},
-  series = {Post-Contemporary Interventions}
+@article{schroeder2006,
+  author = {Schroeder, Franziska},
+  title = {Bodily instruments and instrumental bodies: Critical views on the relation of body and instrument in technologically informed performance environments},
+  journal = {Contemporary Music Review},
+  volume = {25},
+  number = {1-2},
+  year = {2006},
+  pages = {1--5},
+  doi = {10.1080/07494460600647360}
 }
 
-@incollection{agre1997,
-  author = {Agre, Philip E.},
-  title = {Toward a Critical Technical Practice: Lessons Learned in Trying to Reform AI},
-  booktitle = {Bridging the Great Divide: Social Science, Technical Systems, and Cooperative Work},
-  editor = {Bowker, Geoffrey C. and Gasser, Les and Star, Susan Leigh and Turner, William},
-  year = {1997},
-  publisher = {Lawrence Erlbaum Associates},
-  address = {Mahwah, NJ}
+%% ==============================
+%% ATTI DI CONFERENZE
+%% ==============================
+
+
+@inproceedings{waters2007,
+  author = {Waters, Simon},
+  title = {Performance Ecosystems: Ecological Approaches to Musical Interaction},
+  booktitle = {Proceedings of the Electroacoustic Music Studies Network Conference},
+  year = {2007},
+  month = {June},
+  address = {Leicester, UK},
+  organization = {De Montfort University},
+  url = {http://www.ems-network.org/spip.php?article278}
+}
+
+
+@inproceedings{beranger2009,
+  author = {Béranger, Sébastien},
+  title = {Réflexions partisanes sur l'usage du 'live-electronic' dans nos musiques savantes},
+  booktitle = {Actes des Journées d'Informatique Musicale (JIM09)},
+  year = {2009},
+  address = {Grenoble},
+  pages = {35--39},
+  month = {1--3 avril},
+  url = {http://jim.afim-asso.org/jim/downloads/actes/JIM09_Beranger.pdf}
 }
 
 %% ==============================
