--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -46,6 +46,16 @@
   series = {Post-Contemporary Interventions}
 }
 
+@book{discipio2021,
+  author    = {Di Scipio, Agostino},
+  title     = {Circuiti del tempo. Un percorso storico-critico nella creatività musicale elettroacustica e informatica},
+  publisher = {LIM – Libreria Musicale Italiana},
+  address   = {Lucca},
+  year      = {2021},
+  isbn      = {978-88-5543-068-5},
+  pages     = {XIX + 632}
+}
+
 %% ==============================
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
