--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -60,7 +60,7 @@
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
 
-@incollection{discipio2021,
+@incollection{discipio2021thinking,
   author = {Di Scipio, Agostino},
   title = {Thinking Liveness in Performance with Live Electronics},
   booktitle = {Sound Work: Composition as Critical Technical Practice},
