--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -245,6 +245,16 @@
   url = {http://jim.afim-asso.org/jim/downloads/actes/JIM09_Beranger.pdf}
 }
 
+
+
+@unpublished{bernardini2024,
+  author = {Bernardini, Nicola},
+  note   = {Manoscritto non pubblicato},
+  title = {On the emergence of live electronics at the end of the ’70s and the unique contribution of Luigi Nono},
+  year = {2024}
+}
+
+
 %% ==============================
 %% NOTE
 %% ==============================
@@ -255,3 +265,6 @@
 %% - Jameson (Postmodernism)
 %% - Agre (Critical Technical Practice)
 %% - Altri PDF nel project knowledge
+
+
+
