--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -56,9 +56,21 @@
   pages     = {XIX + 632}
 }
 
+
 %% ==============================
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
+
+@incollection{mumma1975,
+  author = {Mumma, Gordon},
+  title = {Live-Electronic Music},
+  booktitle = {The Development and Practice of Electronic Music},
+  editor = {Appleton, Jon H. and Perera, Ronald C.},
+  pages = {286--335},
+  publisher = {Prentice-Hall},
+  address = {Englewood Cliffs, NJ},
+  year = {1975}
+}
 
 @incollection{discipio2021thinking,
   author = {Di Scipio, Agostino},
