--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -96,6 +96,17 @@
   isbn = {9780252039430}
 }
 
+@book{mumma2015,
+  author    = {Mumma, Gordon},
+  title     = {Cybersonic Arts: Adventures in American New Music},
+  editor    = {Fillion, Michelle and Wolff, Christian},
+  publisher = {University of Illinois Press},
+  year      = {2015},
+  address   = {Urbana},
+  series    = {Music in American Life},
+  isbn      = {9780252039430}
+}
+
 @incollection{mumma2015b,
   author = {Mumma, Gordon},
   title = {An Electronic Music Studio for the Independent Composer},
