--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -67,6 +67,16 @@
   isbn      = {9780252039430}
 }
 
+@book{Born1995RationalizingCulture,
+  author       = {Born, Georgina},
+  title        = {Rationalizing Culture: {IRCAM}, Boulez, and the Institutionalization of the Musical Avant-Garde},
+  publisher    = {University of California Press},
+  year         = {1995},
+  address      = {Berkeley, CA \and London},
+  isbn         = {9780520202160},
+  pages        = {392},
+}
+
 %% ==============================
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
