--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -8,6 +8,15 @@
 %% ==============================
 %% LIBRI
 %% ==============================
+@book{TeboulEtAl2024,
+  title        = {Modular Synthesis: Patching Machines and People},
+  editor       = {Teboul, Ezra J. and Kitzmann, Andreas and Engström, Einar},
+  publisher    = {Taylor \& Francis},
+  year         = {2024},
+  address      = {Oxford, UK},
+  edition      = {1st},
+  isbn13       = {9781032113463}
+}
 
 @book{chadabe1997,
   author = {Chadabe, Joel},
@@ -136,6 +145,20 @@
   isbn = {978-94-6270-258-5},
   pages = {121--129}
 }
+
+@incollection{Collins2004_Introduction_CIE,
+  author        = {Collins, Nicolas},
+  title         = {Composers inside Electronics: Music after David Tudor},
+  booktitle     = {Composers inside Electronics: Music After David Tudor},
+  series        = {Leonardo Music Journal},
+  volume        = {14},
+  publisher     = {MIT Press},
+  address       = {Cambridge, MA},
+  year          = {2004},
+  pages         = {1--3},
+  isbn          = {9780262753937}
+}
+
 
 %% ==============================
 %% ARTICOLI IN RIVISTE
