--- a/docs/sitografia.bib
+++ b/docs/sitografia.bib
@@ -2,20 +2,19 @@
 %% SITOGRAFIA
 %% ==============================
 
-@online{tanzi2005,
-  author  = {Tanzi, D.},
-  title   = {Musical objects and digital domains},
-  year    = {2005},
-  note    = {Relazione presentata alla conferenza Electroacoustic Music Studies Network, Montréal 2005},
-  url     = {http://www.ems-network.org/IMG/EMS2005-Tanzi.pdf},
-  keywords  = {web}
+@article{Dewar2018_SonicArtsUnion,
+  author  = {Dewar, Andrew Raffo},
+  title   = {The Sonic Arts Union’s Handmade Electronic Music, 1966–1976},
+  journal = {Red Bull Music Academy},
+  year    = {2018},
+  note    = {online article, accessed 26/11/2025}
 }
 
-@online{szondy2013,
-  author  = {Szondy, D.},
-  title   = {The Voder},
-  year    = {2013},
-  note    = {Ultimo accesso 21.01.2013},
-  url     = {http://davidszondy.com/future/robot/voder.htm},
-  keywords  = {web}
+@online{Teboul2023_CircuitMusicScores,
+  author  = {Teboul, Ezra},
+  title   = {Circuit Music, Circuit Scores},
+  year    = {2023},
+  url     = {https://redthunderaudio.com/post/711070715635449856/circuit-music-circuit-scores},
+  note    = {accessed 26/11/2025}
 }
+
