--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -36,6 +36,15 @@
   doi = {10.4324/9780429264818}
 }
 
+@book{nakai2021,
+  author    = {Nakai, You},
+  title     = {Reminded by the Instruments: David Tudor's Music},
+  year      = {2021},
+  publisher = {Oxford University Press},
+  address   = {Oxford},
+  isbn      = {9780190089306}
+}
+
 @book{collins2020,
   author = {Collins, Nicolas},
   title = {Handmade Electronic Music: The Art of Hardware Hacking},
