--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -155,7 +155,7 @@
   pages = {121--129}
 }
 
-@incollection{Collins2004_Introduction_CIE,
+@incollection{collins2004,
   author        = {Collins, Nicolas},
   title         = {Composers inside Electronics: Music after David Tudor},
   booktitle     = {Composers inside Electronics: Music After David Tudor},
