--- a/docs/sitografia.bib
+++ b/docs/sitografia.bib
@@ -10,7 +10,7 @@
   note    = {online article, accessed 26/11/2025}
 }
 
-@online{Teboul2023_CircuitMusicScores,
+@online{Teboul2023,
   author  = {Teboul, Ezra},
   title   = {Circuit Music, Circuit Scores},
   year    = {2023},
