--- a/docs/sitografia.bib
+++ b/docs/sitografia.bib
@@ -2,7 +2,7 @@
 %% SITOGRAFIA
 %% ==============================
 
-@article{Dewar2018_SonicArtsUnion,
+@article{Dewar2018,
   author  = {Dewar, Andrew Raffo},
   title   = {The Sonic Arts Union’s Handmade Electronic Music, 1966–1976},
   journal = {Red Bull Music Academy},
