--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -95,6 +95,35 @@
   pages        = {392},
 }
 
+
+@book{cardew1971,
+  author    = {Cardew, Cornelius},
+  title     = {Treatise Handbook},
+  publisher = {Edition Peters},
+  address   = {London and New York},
+  year      = {1971},
+  note      = {Include: Bun No. 2, Volo Solo, e il saggio \textit{Towards an Ethic of Improvisation}}
+}
+
+@book{prevost1995,
+  author    = {Prévost, Eddie},
+  title     = {No Sound is Innocent: {AMM} and the Practice of Self-Invention, Meta-musical Narratives: Essays},
+  publisher = {Copula},
+  address   = {Harlow, UK},
+  year      = {1995},
+  isbn      = {0-9525492-0-4}
+}
+
+@book{appleton1975,
+  editor    = {Appleton, Jon H. and Perera, Ronald C.},
+  title     = {The Development and Practice of Electronic Music},
+  publisher = {Prentice-Hall},
+  address   = {Englewood Cliffs, NJ},
+  year      = {1975},
+  pages     = {384},
+  isbn      = {9780132076050}
+}
+
 %% ==============================
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
