--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -124,6 +124,18 @@
   isbn      = {9780132076050}
 }
 
+@book{davies2002soundsheard,
+  author    = {Davies, Hugh},
+  title     = {Sounds Heard: A Pot-pourri of Environmental Projects and Documentation, Projects with Children, Simple Musical Instruments, Sound Installations, Verbal Scores, and Historical Perspectives},
+  publisher = {Soundworld / FMR Records},
+  year      = {2002},
+  address   = {London},
+  isbn      = {9781902440057},
+  pages     = {124},
+  note      = {Includes free CD with recordings; music, projects and documentation by the composer},
+  language  = {English}
+}
+
 %% ==============================
 %% CAPITOLI IN VOLUMI COLLETTANEI
 %% ==============================
