--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -85,7 +85,7 @@
   isbn      = {9780252039430}
 }
 
-@book{Born1995RationalizingCulture,
+@book{born1995,
   author       = {Born, Georgina},
   title        = {Rationalizing Culture: {IRCAM}, Boulez, and the Institutionalization of the Musical Avant-Garde},
   publisher    = {University of California Press},
