--- a/styles/template.latex
+++ b/styles/template.latex
@@ -391,7 +391,7 @@ $if(title)$
     % Riassunto
     $if(abstract)$
     \begin{minipage}{0.9\textwidth}
-        \centering\large\bfseries RIASSUNTO \par
+        \large\bfseries RIASSUNTO \par
         \vspace{0.5cm}
         \normalsize\mdseries
         $abstract$
