--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -320,6 +320,24 @@
   year = {2024}
 }
 
+@article{emmerson1994,
+  author    = {Emmerson, Simon},
+  title     = {`Live' versus `Real-time'},
+  journal   = {Contemporary Music Review},
+  year      = {1994},
+  volume    = {10},
+  number    = {2},
+  pages     = {95--101},
+  publisher = {Harwood Academic Publishers}
+}
+
+@book{emmerson2007,
+  author    = {Emmerson, Simon},
+  title     = {Living Electronic Music},
+  year      = {2007},
+  publisher = {Ashgate},
+  address   = {Aldershot, UK}
+}
 
 %% ==============================
 %% NOTE
