--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -70,8 +70,7 @@
   publisher = {LIM – Libreria Musicale Italiana},
   address   = {Lucca},
   year      = {2021},
-  isbn      = {978-88-5543-068-5},
-  pages     = {XIX + 632}
+  isbn      = {978-88-5543-068-5}
 }
 
 @book{mumma2015,
